--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,28 @@
     margin: 0;
     padding: 0;
 }
-
 body {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    padding: 0;
+    font-family: Trebuchet MS, Arial, Helvetica, sans-serif;
+    width: 80%;
+    margin: 0 auto;
+}
+#encabezadoYnavegacion {
+    display: flex;
 }
 
-body #webDrumbeat {
+#encabezadoYnavegacion img {
+    width: auto;
+}
+
+#encabezadoYnavegacion ul {
+    list-style: none;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 90%;
-    margin: 80px auto;
+    gap: 20px;
+}
+
+#encabezadoYnavegacion ul li a {
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
 }
