--- a/styles.css
+++ b/styles.css
@@ -6,29 +6,23 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
     color: #213547;
     background: #ffffff;
     line-height: 1.45;
     font-size: 16px;
-    zoom: 120%;
 }
 
 /* Contenedor */
 .container {
     max-width: 1500px;
-    width: 85%;
+    width: 70%;
     margin: 0 auto;
-    display: flex;
-    justify-content: flex-start;
 }
 
 
 /* Header */
 .site-header {
-    border-bottom: 1px solid #ebf0f3;
-    background: linear-gradient(180deg,#ffffff 0%, #fbfdff 100%);
-    position: sticky;
     top: 0;
     z-index: 40;
 }
@@ -37,8 +31,8 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 1rem;
-    padding: 0.8rem 0;
+    gap: 25px;
+    padding: 3px 0;
 }
 
 .header-title {
@@ -51,13 +45,49 @@ html, body {
 
 .logo {
     display: flex;
-    align-items: center;
-    gap: 0.75rem;
+    gap: 2px;
 }
 .logo img {
     border-radius: 6px;
+    width: 600px;
 }
 
+.first-nav {
+    display: flex;
+    gap: 2px;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+}
+
+.access-nav {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.access-nav a {
+    text-decoration: none;
+    color: #667786;
+    padding: 3px 8px;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 22px;
+    font-family: Helvetica, Arial, sans-serif;
+}
+.access-nav a:hover {
+    color: #283846;
+    background: rgba(0,0,0,0.03);
+}
+
+.titulo {
+    color: #147d9c;
+    margin: 0 0 1px;
+    font-weight: 700;
+    text-shadow: 3px -2px 2px #147d9c;
+    font-size: 50px;
+}
 /* Div de accesos directos e idioma */
 
 .subnav {
@@ -65,8 +95,13 @@ html, body {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #dcdcdc;
-    margin-top: 0.5rem;
+    margin-top: 2px;
     width: 100%;
+    border-bottom: 1px solid #dcdcdc;
+}
+
+.subnav-links {
+    margin-left: 10px;
 }
 
 .subnav-links a {
@@ -74,17 +109,22 @@ html, body {
     background: #ededed;
     padding: 2px 10px;
     margin-right: 1px;
-    color: #666666;
-    font-size: 14px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-
+    color: #a6a6a6;
+    font-size: 20px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    position: relative;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    outline: none;
 }
 
 .subnav-links a.active {
-    background: white;
-    border: 1px solid #ccc;
-    color: #333;
+    color: #666;
+    border-bottom: none;
+    font-weight: bold;
+    margin-bottom: -1px;
 }
 
 .language {
@@ -92,6 +132,7 @@ html, body {
     align-items: center;
     gap: 2px;
     font-size: 12px;
+    margin-right: 10px;
 }
 
 .language span {
@@ -112,25 +153,35 @@ html, body {
     color: #333;
 }
 
-
-
 /* Nav */
+
+.main-nav {
+    display: flex;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .main-nav ul {
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 0.6rem;
     margin: 0;
     padding: 0;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .main-nav a {
     text-decoration: none;
     color: #667786;
-    padding: 0.45rem 0.65rem;
     border-radius: 6px;
-    font-weight: 600;
-    font-size: 0.95rem;
+    font-weight: 800;
+    font-size: 36px;
+    background-color: #f8f8f8;
+    padding: 1px 9px;
 }
 
 .main-nav a:hover {
@@ -148,7 +199,7 @@ html, body {
 
 /* Layout de la página */
 .page {
-    padding: 1.75rem 0 3rem;
+    padding: 10px 2px;
 }
 
 .grid {
@@ -158,13 +209,20 @@ html, body {
     align-items: start;
 }
 
+.intro img {
+    object-fit: cover;
+    float: right;
+}
+
+.intro h3 {
+    color: #40b9c4;
+    text-shadow: 2px -1px 3px #40b9c4;
+    margin: 0;
+    font-weight: bold;
+    font-size: 40px;
+}
 
 /* Main contenido */
-.titulo {
-    color: #147d9c;
-    margin: 0 0 0.5rem;
-    font-size: 1.6rem;
-}
 
 .lead {
     color: #667786;
@@ -187,7 +245,7 @@ html, body {
 }
 
 .card h5 {
-    margin: 0 0 0.35rem;
+    margin: 0 0 3px;
     font-size: 1rem;
 }
 
