--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ html, body {
     display: flex;
     align-items: center;
     font-size: 12px;
+    gap: 10px;
     margin-right: 10px;
     padding: 0;
     border-radius: 12px;
